testsuite/tests/partial-sigs/should_fail/NamedExtraConstraintsWildcard.stderr

NamedExtraConstraintsWildcard.hs:5:1: error:
    • Could not deduce: _0
      from the context: (Eq a, _)
        bound by the inferred type for ‘foo’:
                   forall a (_ :: Constraint). (Eq a, _) => a -> a
        at NamedExtraConstraintsWildcard.hs:5:1-15
    • In the ambiguity check for the inferred type for ‘foo’
      To defer the ambiguity check to use sites, enable AllowAmbiguousTypes
      When checking the inferred type
        foo :: forall a (_ :: Constraint). (Eq a, _) => a -> a
